dataset1235/2025-2/2947369575/users/1218589494/executions/1003782500_1927446959.log
== SUBMISSION (2025-08-27 23:26:34)
-- CODE: 
n = float(input("valor real:"))
27 = n*(27/100)
42 = n+(n*(42/100))
63 = n-(n*(63/100))
print(round(27,2))
print(round(63,2))
print(round(42,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:57:52)
-- CODE: 
int(input())
print(round(27%int,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '12.15'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:25:42)
-- CODE: 
n = float(input("valor real:"))
27 = n*(27/100)
print(round(27,2))

42 = n+(n*(42/100))
print(round(42,2))

63 = n-(n*(63/100))
print(round(63,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:27:18)
-- CODE: 
n = float(input("valor real:"))
cont1 = n*(27/100)
cont2 = n+(n*(42/100))
cont3 = n-(n*(63/100))
print(round(27,2))
print(round(63,2))
print(round(42,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
42
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
42
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
42
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
42
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
42
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:00:52)
-- CODE: 
n = int(input())
m = 27%n
print(round(m,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    print(round(m,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    print(round(m,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    print(round(m,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    print(round(m,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    print(round(m,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    print(round(m,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:03:34)
-- CODE: 
n = int(input())
m = 27/100
print(round(m*n,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:58:12)
-- CODE: 
int(input())
print(round(27 % int, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '12.15'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:58:01)
-- CODE: 
int(input())
print(round(27 % int,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '12.15'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:03:31)
-- CODE: 
n = int(input())
m = 27/100
print(round(m*n,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:58:01)
-- CODE: 
int(input())
print(round(27 % int,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '12.15'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:27:52)
-- CODE: 
n = float(input("valor real:"))
cont1 = n*(27/100)
cont2 = n+n*(42/100)
cont3 = n-n*(63/100)
print(round(27,2))
print(round(63,2))
print(round(42,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
42
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
42
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
42
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
42
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
42
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:23:44)
-- CODE: 
n = float(input("valor real:"))
27 = n*(27/100)
print(round(27,2))

42 = n+(n*(42/100))
print(round(42,2))

63 = n-(n*(63/100))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:03:33)
-- CODE: 
n = int(input())
m = 27/100
print(round(m*n,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:03:11)
-- CODE: 
n = int(input())
m = 27/100
print(round(m*n,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    print(round(m*n,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:22:44)
-- CODE: 
n = float(input("valor real:"))
27 = n*(27/100)
print(round(27,2))

42 = n+(n*(42/100))
print(round(42,2))

63 = (n*(63/100))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:28:37)
-- CODE: 
n = float(input("valor real:"))
cont1 = n*(27/100)
cont2 = n+n*(42/100)
cont3 = n-n*(63/100)
print(round(cont1,2))
print(round(cont2,2))
print(round(cont3,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:58:11)
-- CODE: 
int(input())
print(round(27 % int, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '12.15'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:58:03)
-- CODE: 
int(input())
print(round(27 % int,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '12.15'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:24:31)
-- CODE: 
n = float(input("valor real:"))
27 = n*(27/100)
print(round(27,2))

42 = n+(n*(42/100))
print(round(42,2))

63 = n-(n*(63/100))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:58:11)
-- CODE: 
int(input())
print(round(27 % int, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '12.15'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:23:41)
-- CODE: 
n = float(input("valor real:"))
27 = n*(27/100)
print(round(27,2))

42 = n+(n*(42/100))
print(round(42,2))

63 = n-(n*(63/100))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 2
    27 = n*(27/100)
    ^^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:00:50)
-- CODE: 
n = int(input())
m = 27%n
print(round(m,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    print(round(m,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    print(round(m,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    print(round(m,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    print(round(m,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    print(round(m,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    print(round(m,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
